deploy: 73bb197442c280d2e7d3085ee1951b842da3862a

--- a/classes/__getflywheel_local_.sitepaths.html
+++ b/classes/__getflywheel_local_.sitepaths.html
@@ -113,7 +113,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/index.d.ts#L187">index.d.ts:187</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/index.d.ts#L187">index.d.ts:187</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -131,51 +131,51 @@
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="app" class="tsd-anchor"></a>
-					<h3>app</h3>
+					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> app</h3>
 					<div class="tsd-signature tsd-kind-icon">app<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/index.d.ts#L191">index.d.ts:191</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/index.d.ts#L191">index.d.ts:191</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="conf" class="tsd-anchor"></a>
-					<h3>conf</h3>
+					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> conf</h3>
 					<div class="tsd-signature tsd-kind-icon">conf<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/index.d.ts#L197">index.d.ts:197</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/index.d.ts#L197">index.d.ts:197</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="conftemplates" class="tsd-anchor"></a>
-					<h3>conf<wbr>Templates</h3>
+					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> conf<wbr>Templates</h3>
 					<div class="tsd-signature tsd-kind-icon">conf<wbr>Templates<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/index.d.ts#L199">index.d.ts:199</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/index.d.ts#L199">index.d.ts:199</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="logs" class="tsd-anchor"></a>
-					<h3>logs</h3>
+					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> logs</h3>
 					<div class="tsd-signature tsd-kind-icon">logs<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/index.d.ts#L201">index.d.ts:201</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/index.d.ts#L201">index.d.ts:201</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="rundata" class="tsd-anchor"></a>
-					<h3>run<wbr>Data</h3>
+					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> run<wbr>Data</h3>
 					<div class="tsd-signature tsd-kind-icon">run<wbr>Data<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/index.d.ts#L203">index.d.ts:203</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/index.d.ts#L203">index.d.ts:203</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -185,27 +185,27 @@
 					<div class="tsd-signature tsd-kind-icon">site<span class="tsd-signature-symbol">:</span> <a href="__getflywheel_local_.site.html" class="tsd-signature-type">Site</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/index.d.ts#L187">index.d.ts:187</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/index.d.ts#L187">index.d.ts:187</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="sql" class="tsd-anchor"></a>
-					<h3>sql</h3>
+					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> sql</h3>
 					<div class="tsd-signature tsd-kind-icon">sql<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/index.d.ts#L193">index.d.ts:193</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/index.d.ts#L193">index.d.ts:193</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="webroot" class="tsd-anchor"></a>
-					<h3>web<wbr>Root</h3>
+					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> web<wbr>Root</h3>
 					<div class="tsd-signature tsd-kind-icon">web<wbr>Root<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/index.d.ts#L195">index.d.ts:195</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/index.d.ts#L195">index.d.ts:195</a></li>
 						</ul>
 					</aside>
 				</section>
