--- a/classes/__getflywheel_local_main_.services.siteprovisioner.html
+++ b/classes/__getflywheel_local_main_.services.siteprovisioner.html
@@ -88,6 +88,7 @@
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="__getflywheel_local_main_.services.siteprovisioner.html#checkforwinredists" class="tsd-kind-icon">check<wbr>For<wbr>Win<wbr>Redists</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="__getflywheel_local_main_.services.siteprovisioner.html#onprovisionerror" class="tsd-kind-icon">on<wbr>Provision<wbr>Error</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="__getflywheel_local_main_.services.siteprovisioner.html#provision" class="tsd-kind-icon">provision</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="__getflywheel_local_main_.services.siteprovisioner.html#swapservice" class="tsd-kind-icon">swap<wbr>Service</a></li>
 							</ul>
 						</section>
 					</div>
@@ -105,7 +106,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L794">main.d.ts:794</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L794">main.d.ts:794</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -129,7 +130,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L796">main.d.ts:796</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L796">main.d.ts:796</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -155,13 +156,42 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L798">main.d.ts:798</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L798">main.d.ts:798</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
 									<h5>site: <a href="__getflywheel_local_.site.html" class="tsd-signature-type">Site</a></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
+					<a name="swapservice" class="tsd-anchor"></a>
+					<h3>swap<wbr>Service</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
+						<li class="tsd-signature tsd-kind-icon">swap<wbr>Service<span class="tsd-signature-symbol">(</span>site<span class="tsd-signature-symbol">: </span><a href="__getflywheel_local_.site.html" class="tsd-signature-type">Site</a>, role<span class="tsd-signature-symbol">: </span><a href="../enums/__getflywheel_local_.siteservicerole.html" class="tsd-signature-type">SiteServiceRole</a>, serviceBinVersion<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L800">main.d.ts:800</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>site: <a href="__getflywheel_local_.site.html" class="tsd-signature-type">Site</a></h5>
+								</li>
+								<li>
+									<h5>role: <a href="../enums/__getflywheel_local_.siteservicerole.html" class="tsd-signature-type">SiteServiceRole</a></h5>
+								</li>
+								<li>
+									<h5>serviceBinVersion: <span class="tsd-signature-type">string</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -265,6 +295,9 @@
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="__getflywheel_local_main_.services.siteprovisioner.html#provision" class="tsd-kind-icon">provision</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class">
+								<a href="__getflywheel_local_main_.services.siteprovisioner.html#swapservice" class="tsd-kind-icon">swap<wbr>Service</a>
 							</li>
 						</ul>
 					</li>
