--- a/classes/__getflywheel_local_main_.sitedata.html
+++ b/classes/__getflywheel_local_main_.sitedata.html
@@ -107,7 +107,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L60">main.d.ts:60</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L60">main.d.ts:60</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -133,7 +133,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L64">main.d.ts:64</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L64">main.d.ts:64</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -150,13 +150,13 @@
 					<a name="getsite" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagStatic">Static</span> get<wbr>Site</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-static">
-						<li class="tsd-signature tsd-kind-icon">get<wbr>Site<span class="tsd-signature-symbol">(</span>siteID<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Site</span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type">"id"</span><span class="tsd-signature-symbol">]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="__getflywheel_local_.site.html" class="tsd-signature-type">Site</a></li>
+						<li class="tsd-signature tsd-kind-icon">get<wbr>Site<span class="tsd-signature-symbol">(</span>siteID<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Site</span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type">"id"</span><span class="tsd-signature-symbol">]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="__getflywheel_local_.site.html" class="tsd-signature-type">Site</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L56">main.d.ts:56</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L56">main.d.ts:56</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -165,7 +165,7 @@
 									<h5>siteID: <span class="tsd-signature-type">Site</span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type">"id"</span><span class="tsd-signature-symbol">]</span></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="__getflywheel_local_.site.html" class="tsd-signature-type">Site</a></h4>
+							<h4 class="tsd-returns-title">Returns <a href="__getflywheel_local_.site.html" class="tsd-signature-type">Site</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -173,13 +173,13 @@
 					<a name="getsitebyproperty" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagStatic">Static</span> get<wbr>Site<wbr>ByProperty</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-static">
-						<li class="tsd-signature tsd-kind-icon">get<wbr>Site<wbr>ByProperty<span class="tsd-signature-symbol">(</span>property<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, value<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="__getflywheel_local_.site.html" class="tsd-signature-type">Site</a></li>
+						<li class="tsd-signature tsd-kind-icon">get<wbr>Site<wbr>ByProperty<span class="tsd-signature-symbol">(</span>property<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, value<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="__getflywheel_local_.site.html" class="tsd-signature-type">Site</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L58">main.d.ts:58</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L58">main.d.ts:58</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -191,7 +191,7 @@
 									<h5>value: <span class="tsd-signature-type">any</span></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="__getflywheel_local_.site.html" class="tsd-signature-type">Site</a></h4>
+							<h4 class="tsd-returns-title">Returns <a href="__getflywheel_local_.site.html" class="tsd-signature-type">Site</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -205,7 +205,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L52">main.d.ts:52</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L52">main.d.ts:52</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Local.Sites</span></h4>
@@ -222,7 +222,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L54">main.d.ts:54</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L54">main.d.ts:54</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -245,7 +245,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L66">main.d.ts:66</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L66">main.d.ts:66</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -262,7 +262,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/9c6e6bc/main.d.ts#L62">main.d.ts:62</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/73bb197/main.d.ts#L62">main.d.ts:62</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
